# pilot

./: Cargo.toml
crates/llm-interface/: Cargo.toml
crates/llm-interface/src/: lib.rs
crates/open-router/: Cargo.toml  test_system_message.txt
crates/open-router/src/: lib.rs  request_body.rs  response_body.rs  tests.rs
crates/pilot-cli/: Cargo.toml
crates/pilot-cli/src/: main.rs
