[workspace]
members = [
  "crates/llm-interface",
  "crates/open-router",
  "crates/pilot-cli"
]

[workspace.dependencies]
llm-interface = { path = "crates/llm-interface" }
open-router = { path = "crates/open-router" }

reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-test = "0.4.4"
nestify = "0.3.3"
